# NanoEngine-C

./: .gitignore  CMakeLists.txt  PreLoad.cmake  README.md  init_NanoEngine.sh
Scenes/: scene1.json
Shaders/: frag_shader.spv  vert_shader.spv
src/: MemManager.c  MemManager.h  NanoBuffers.c  NanoBuffers.h  NanoCamera.c  NanoCamera.h  NanoConfig.c  NanoConfig.h  NanoEngine.c  NanoEngine.cpp  NanoEngine.h  NanoEngine.hpp  NanoError.c  NanoError.h  NanoError.hpp  NanoGraphics.c  NanoGraphics.cpp  NanoGraphics.h  NanoGraphics.hpp  NanoGraphicsPipeline.c  NanoGraphicsPipeline.cpp  NanoGraphicsPipeline.h  NanoGraphicsPipeline.hpp  NanoImage.c  NanoImage.h  NanoInput.c  NanoInput.h  NanoLogger.cpp  NanoLogger.hpp  NanoMesh.c  NanoMesh.h  NanoRenderable.c  NanoRenderable.h  NanoRenderer.c  NanoRenderer.h  NanoScene.c  NanoScene.h  NanoShader.c  NanoShader.cpp  NanoShader.h  (+18 more)
src/shader/: frag_shader.spv  shader.frag  shader.vert  vert_shader.spv
src/shader-code/: shader.frag  shader.vert
